[package]
name = "nodes-engine"
version = "0.1.0"
authors = ["Ivan Pleshkov <Ivan.Pleshkov@darkmatter.ae>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
nodes-vm = { path = "../nodes-vm" }
log = "0.4"
fern = "0.5.8"
nalgebra = "0.18.1"
