[package]
name = "playground"
version = "0.1.0"
authors = ["Ivan Pleshkov <pleshkov.ivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
imgui_window = { path = "../imgui_window" }
log = "0.4"
fern = "0.5"
nalgebra = "0.19"
clipboard = "0.5"
glium = { version = "0.25", default-features = true }
image = "0.22"
imgui = "0.2"
imgui-glium-renderer = "0.2"
imgui-winit-support = "0.2"
