[package]
name = "render"
version = "0.1.0"
authors = ["Ivan Pleshkov <pleshkov.ivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
log = "0.4"
fern = "0.5"
nalgebra = "0.21.1"
semver = "0.9"
